--- a/skills.html
+++ b/skills.html
@@ -23,85 +23,150 @@
 </nav>
 
 <header>
-  <h1>Essential Skills for Commerce Students</h1>
-  <p>Degrees open doors. Skills decide how far you go.</p>
+  <h1>Commerce Skills Roadmap</h1>
+  <p>What each skill actually means, how to learn it, and why it matters.</p>
 </header>
 
+<!-- SKILL 1 -->
 <section class="course">
-  <h2>1️⃣ Core Commerce Skills</h2>
-  <ul>
-    <li>Accounting fundamentals</li>
-    <li>Financial statement analysis</li>
-    <li>Basic taxation (GST & Income Tax)</li>
-    <li>Understanding business models</li>
-  </ul>
-</section>
+  <h2>📊 Excel & Data Skills</h2>
+  <p><strong>What it means:</strong> Working with data, reports, analysis, and dashboards.</p>
 
-<section class="course">
-  <h2>2️⃣ Tools & Software</h2>
+  <p><strong>How to learn:</strong></p>
   <ul>
-    <li>Excel (advanced formulas, dashboards)</li>
-    <li>Tally / accounting software</li>
-    <li>PowerPoint (business presentations)</li>
-    <li>Basic SQL or data tools (optional edge)</li>
+    <li>Start with formulas (SUM, IF, VLOOKUP)</li>
+    <li>Move to Pivot Tables & dashboards</li>
+    <li>Practice on real data</li>
   </ul>
-</section>
 
-<section class="course">
-  <h2>3️⃣ Communication & Professional Mindset</h2>
-  <ul>
-    <li>Email & corporate communication</li>
-    <li>Presentation & speaking skills</li>
-    <li>Time management & discipline</li>
-    <li>Professional ethics</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>4️⃣ AI & Future-Proof Skills</h2>
-  <ul>
-    <li>Using AI tools for research & analysis</li>
-    <li>Data interpretation</li>
-    <li>Understanding automation in finance</li>
-    <li>Continuous learning mindset</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>5️⃣ Free Learning Resources</h2>
+  <p><strong>Free Resources:</strong></p>
   <ul>
     <li>
-      Excel & Data Skills – 
+      <a href="https://learn.microsoft.com/en-us/training/browse/?products=excel" target="_blank">
+        Microsoft Learn – Excel (Official)
+      </a>
+    </li>
+    <li>
       <a href="https://www.youtube.com/@LeilaGharani" target="_blank">
-        Leila Gharani
+        Leila Gharani (YouTube)
       </a>
     </li>
+  </ul>
+
+  <p><strong>Future Scope:</strong> Required in almost every finance, accounting, analytics, and corporate role.</p>
+</section>
+
+<!-- SKILL 2 -->
+<section class="course">
+  <h2>📒 Accounting & Financial Understanding</h2>
+  <p><strong>What it means:</strong> Understanding how money flows in a business.</p>
+
+  <p><strong>How to learn:</strong></p>
+  <ul>
+    <li>Basics of journal entries</li>
+    <li>Profit & Loss, Balance Sheet, Cash Flow</li>
+    <li>Real-world examples</li>
+  </ul>
+
+  <p><strong>Free Resources:</strong></p>
+  <ul>
     <li>
-      Accounting Basics – 
       <a href="https://www.youtube.com/@AccountingStuff" target="_blank">
-        Accounting Stuff
+        Accounting Stuff (YouTube)
       </a>
     </li>
     <li>
-      Finance Concepts – 
       <a href="https://www.investopedia.com" target="_blank">
         Investopedia
       </a>
     </li>
+  </ul>
+
+  <p><strong>Future Scope:</strong> Core requirement for CA, CMA, MBA (Finance), CS, and corporate jobs.</p>
+</section>
+
+<!-- SKILL 3 -->
+<section class="course">
+  <h2>🧾 Taxation & Compliance Basics</h2>
+  <p><strong>What it means:</strong> Understanding GST, Income Tax, and compliance.</p>
+
+  <p><strong>How to learn:</strong></p>
+  <ul>
+    <li>Understand GST structure</li>
+    <li>Learn basics of Income Tax</li>
+    <li>Follow real case examples</li>
+  </ul>
+
+  <p><strong>Free Resources:</strong></p>
+  <ul>
     <li>
-      AI Basics – 
-      <a href="https://www.youtube.com/@SimplilearnOfficial" target="_blank">
-        Simplilearn
+      <a href="https://www.youtube.com/@CAClubIndia" target="_blank">
+        CAclubindia (YouTube)
       </a>
     </li>
   </ul>
+
+  <p><strong>Future Scope:</strong> Highly valuable for CA, CMA, tax roles, and finance professionals.</p>
+</section>
+
+<!-- SKILL 4 -->
+<section class="course">
+  <h2>🗣 Communication & Professional Skills</h2>
+  <p><strong>What it means:</strong> How you speak, write, and present professionally.</p>
+
+  <p><strong>How to learn:</strong></p>
+  <ul>
+    <li>Practice email writing</li>
+    <li>Presentation & speaking</li>
+    <li>Confidence-building exercises</li>
+  </ul>
+
+  <p><strong>Free Resources:</strong></p>
+  <ul>
+    <li>
+      <a href="https://www.youtube.com/@TED" target="_blank">
+        TED Talks
+      </a>
+    </li>
+    <li>
+      <a href="https://www.youtube.com/@LearnEnglishWithTVSeries" target="_blank">
+        Learn English with TV Series
+      </a>
+    </li>
+  </ul>
+
+  <p><strong>Future Scope:</strong> Major differentiator between average and top professionals.</p>
+</section>
+
+<!-- SKILL 5 -->
+<section class="course">
+  <h2>🤖 AI & Future Skills</h2>
+  <p><strong>What it means:</strong> Using AI tools to work faster and smarter.</p>
+
+  <p><strong>How to learn:</strong></p>
+  <ul>
+    <li>Use AI for research & summaries</li>
+    <li>Understand automation basics</li>
+    <li>Stay updated</li>
+  </ul>
+
+  <p><strong>Free Resources:</strong></p>
+  <ul>
+    <li>
+      <a href="https://www.youtube.com/@SimplilearnOfficial" target="_blank">
+        Simplilearn (YouTube)
+      </a>
+    </li>
+  </ul>
+
+  <p><strong>Future Scope:</strong> Early adopters gain massive advantage in finance & business roles.</p>
 </section>
 
 <section class="course">
-  <h2>Reality Check</h2>
+  <h2>Final Truth</h2>
   <p>
-    Students who combine <strong>degree + skills</strong> grow faster, earn more,
-    and face less career regret than those who rely on degrees alone.
+    Degrees decide eligibility. <strong>Skills decide income, growth, and respect.</strong><br>
+    Start early. Stay consistent.
   </p>
 </section>
 
