--- a/bba.html
+++ b/bba.html
@@ -25,6 +25,12 @@
   <h1>BBA Career Roadmap</h1>
   <p>Management-focused degree for students aiming leadership & business roles</p>
 </header>
+    <section class="course">
+  <p>
+    🔑 <strong>Important:</strong> Your long-term success depends more on skills than degree.
+    <a href="skills.html">View the complete Commerce Skills Roadmap →</a>
+  </p>
+</section>
 
 <section class="course">
   <h2>Who Should Choose BBA?</h2>
