--- a/bcom.html
+++ b/bcom.html
@@ -26,6 +26,12 @@
     <h1>B.Com Career Roadmap</h1>
     <p>A step-by-step guide to skills, careers, and smart choices during B.Com.</p>
   </header>
+  <section class="course">
+  <p>
+    🔑 <strong>Important:</strong> Your long-term success depends more on skills than degree.
+    <a href="skills.html">View the complete Commerce Skills Roadmap →</a>
+  </p>
+</section>
 
   <!-- WHO IS THIS FOR -->
   <section class="course">
