--- a/ca.html
+++ b/ca.html
@@ -18,6 +18,13 @@
   <a href="skills.html">Skills</a>
   <a href="compare.html">Compare</a>
 </nav>
+
+  <section class="course">
+  <p>
+    🔑 <strong>Important:</strong> Your long-term success depends more on skills than degree.
+    <a href="skills.html">View the complete Commerce Skills Roadmap →</a>
+  </p>
+</section>
   
 <section class="course">
   <h1>CA (Chartered Accountant) Career Roadmap</h1>
