--- a/cma.html
+++ b/cma.html
@@ -26,6 +26,12 @@
   <h1>CMA Career Roadmap</h1>
   <p>Costing, strategy & performance management career</p>
 </header>
+  <section class="course">
+  <p>
+    🔑 <strong>Important:</strong> Your long-term success depends more on skills than degree.
+    <a href="skills.html">View the complete Commerce Skills Roadmap →</a>
+  </p>
+</section>
 
 <section class="course">
   <h2>Who Should Choose CMA?</h2>
