--- a/cs.html
+++ b/cs.html
@@ -26,6 +26,12 @@
   <h1>Company Secretary (CS) Roadmap</h1>
   <p>Corporate law, compliance & governance career</p>
 </header>
+  <section class="course">
+  <p>
+    🔑 <strong>Important:</strong> Your long-term success depends more on skills than degree.
+    <a href="skills.html">View the complete Commerce Skills Roadmap →</a>
+  </p>
+</section>
 
 <section class="course">
   <h2>Who Should Choose CS?</h2>
