--- a/mba.html
+++ b/mba.html
@@ -25,6 +25,12 @@
     <h1>MBA Career Roadmap</h1>
     <p>A practical guide to MBA specializations, skills, careers & growth</p>
   </header>
+  <section class="course">
+  <p>
+    🔑 <strong>Important:</strong> Your long-term success depends more on skills than degree.
+    <a href="skills.html">View the complete Commerce Skills Roadmap →</a>
+  </p>
+</section>
 
   <section class="course">
     <h2>What is an MBA?</h2>
