--- a/mba.html
+++ b/mba.html
@@ -40,6 +40,25 @@
       aiming for corporate leadership, consulting, startups, or high-growth roles.
     </p>
   </section>
+  <section class="course">
+  <h2>Who Should (and Should NOT) Do an MBA</h2>
+
+  <h3>✅ MBA is a great choice if you:</h3>
+  <ul>
+    <li>Want leadership, management, consulting or corporate roles</li>
+    <li>Are comfortable with presentations, teamwork & networking</li>
+    <li>Are willing to compete aggressively for internships & placements</li>
+    <li>Plan to build long-term corporate or startup careers</li>
+  </ul>
+
+  <h3>❌ MBA may NOT be ideal if you:</h3>
+  <ul>
+    <li>Dislike presentations, group work or people-facing roles</li>
+    <li>Expect the degree alone to guarantee success</li>
+    <li>Prefer purely technical or individual work</li>
+    <li>Are not willing to continuously upskill</li>
+  </ul>
+</section>
 
   <section class="course">
     <h2>Popular MBA Specializations</h2>
@@ -67,13 +86,36 @@
   <section class="course">
     <h2>High-Impact Skills to Learn (This Makes You Stand Out)</h2>
     <ul>
-      <li>Advanced Excel & Financial Modeling</li>
-      <li>PowerPoint (consulting-level slides)</li>
-      <li>Business Communication & Storytelling</li>
-      <li>Data Analysis (basic SQL / Power BI / Tableau)</li>
-      <li>Negotiation & Leadership</li>
-      <li>AI tools for productivity (ChatGPT, automation tools)</li>
-    </ul>
+  <li>
+    <strong>Advanced Excel & Financial Modeling</strong><br>
+    Used in finance, consulting, analytics and corporate strategy roles.
+  </li>
+
+  <li>
+    <strong>PowerPoint & Business Storytelling</strong><br>
+    Essential for consulting, management and leadership communication.
+  </li>
+
+  <li>
+    <strong>Business Communication</strong><br>
+    Helps in interviews, negotiations, client-facing and leadership roles.
+  </li>
+
+  <li>
+    <strong>Data Analysis (SQL / Power BI / Tableau)</strong><br>
+    Valuable for analytics, strategy, operations and decision-making roles.
+  </li>
+
+  <li>
+    <strong>Negotiation & Leadership</strong><br>
+    Critical for managerial growth and long-term career advancement.
+  </li>
+
+  <li>
+    <strong>AI & Automation Tools</strong><br>
+    Improves productivity and gives an edge in modern corporate roles.
+  </li>
+</ul>
   </section>
 
   <section class="course">
@@ -87,6 +129,28 @@
       <li>Operations Manager</li>
     </ul>
   </section>
+  <section class="course">
+  <h2>MBA College Tier Reality (The Honest Truth)</h2>
+
+  <ul>
+    <li>
+      <strong>Tier 1 Colleges (IIMs, ISB, top private institutes):</strong><br>
+      Strong brand value, elite roles, powerful alumni network.
+    </li>
+
+    <li>
+      <strong>Tier 2 Colleges:</strong><br>
+      Good opportunities but outcomes depend heavily on skills, internships and effort.
+    </li>
+
+    <li>
+      <strong>Tier 3 Colleges:</strong><br>
+      Degree alone has limited value. Skills, networking and off-campus placements become critical.
+    </li>
+  </ul>
+
+  <p><em>Reality: Your long-term growth depends more on skills than college name.</em></p>
+</section>
 
   <section class="course">
     <h2>Salary Expectations (India)</h2>
@@ -121,6 +185,26 @@
       </li>
     </ul>
   </section>
+  <section class="course">
+  <h2>MBA vs Other Career Options</h2>
+
+  <ul>
+    <li>
+      <strong>MBA vs CA:</strong><br>
+      MBA focuses on management & leadership, CA focuses on accounting & finance depth.
+    </li>
+
+    <li>
+      <strong>MBA vs CFA:</strong><br>
+      MBA offers broader roles, CFA is specialized for finance & investments.
+    </li>
+
+    <li>
+      <strong>MBA vs MSc / Analytics:</strong><br>
+      MBA is people & strategy driven, MSc is technical & data-focused.
+    </li>
+  </ul>
+</section>
 
   <section class="course">
     <h2>Common Mistakes MBA Students Make</h2>
