--- a/skills.html
+++ b/skills.html
@@ -26,18 +26,39 @@
   <h1>Commerce Skills Roadmap</h1>
   <p>What each skill actually means, how to learn it, and why it matters.</p>
 </header>
+  <section class="course">
+  <h2>How to Use This Skills Roadmap</h2>
+  <ul>
+    <li>If you’re in <strong>1st year</strong> → Start with Excel + Communication</li>
+    <li>If you’re in <strong>2nd year</strong> → Add Accounting + Taxation</li>
+    <li>If you’re in <strong>Final year / MBA / CA</strong> → Add Data + AI skills</li>
+  </ul>
+  <p>
+    You don’t need all skills at once. You need the <strong>right skill at the right time</strong>.
+  </p>
+</section>
+  <section class="course">
+  <h2>Quick Skill Navigation</h2>
+  <ul>
+    <li><a href="#excel">Excel & Data</a></li>
+    <li><a href="#accounting">Accounting</a></li>
+    <li><a href="#tax">Taxation</a></li>
+    <li><a href="#communication">Communication</a></li>
+    <li><a href="#ai">AI & Future Skills</a></li>
+  </ul>
+</section>
 
 <!-- SKILL 1 -->
-<section class="course">
+<section class="course" id="excel">
   <h2>📊 Excel & Data Skills</h2>
   <p><strong>What it means:</strong> Working with data, reports, analysis, and dashboards.</p>
 
   <p><strong>How to learn:</strong></p>
   <ul>
-    <li>Start with formulas (SUM, IF, VLOOKUP)</li>
-    <li>Move to Pivot Tables & dashboards</li>
-    <li>Practice on real data</li>
-  </ul>
+  <li><strong>Beginner:</strong> SUM, IF, basic formulas</li>
+  <li><strong>Intermediate:</strong> VLOOKUP, Pivot Tables</li>
+  <li><strong>Advanced:</strong> Dashboards, automation</li>
+</ul>
 
   <p><strong>Free Resources:</strong></p>
   <ul>
@@ -57,16 +78,16 @@
 </section>
 
 <!-- SKILL 2 -->
-<section class="course">
+<section class="course" id="accounting">
   <h2>📒 Accounting & Financial Understanding</h2>
   <p><strong>What it means:</strong> Understanding how money flows in a business.</p>
 
   <p><strong>How to learn:</strong></p>
   <ul>
-    <li>Basics of journal entries</li>
-    <li>Profit & Loss, Balance Sheet, Cash Flow</li>
-    <li>Real-world examples</li>
-  </ul>
+  <li><strong>Beginner:</strong> Journal entries, debit/credit</li>
+  <li><strong>Intermediate:</strong> P&L, Balance Sheet, Cash Flow</li>
+  <li><strong>Advanced:</strong> Analysis, ratios, real company statements</li>
+</ul>
 
   <p><strong>Free Resources:</strong></p>
   <ul>
@@ -86,16 +107,16 @@
 </section>
 
 <!-- SKILL 3 -->
-<section class="course">
+<section class="course" id="tax">
   <h2>🧾 Taxation & Compliance Basics</h2>
   <p><strong>What it means:</strong> Understanding GST, Income Tax, and compliance.</p>
 
   <p><strong>How to learn:</strong></p>
   <ul>
-    <li>Understand GST structure</li>
-    <li>Learn basics of Income Tax</li>
-    <li>Follow real case examples</li>
-  </ul>
+  <li><strong>Beginner:</strong> GST basics, tax terms</li>
+  <li><strong>Intermediate:</strong> GST returns, Income Tax structure</li>
+  <li><strong>Advanced:</strong> Case studies, compliance practice</li>
+</ul>
 
   <p><strong>Free Resources:</strong></p>
   <ul>
@@ -110,16 +131,16 @@
 </section>
 
 <!-- SKILL 4 -->
-<section class="course">
+<section class="course" id="communication">
   <h2>🗣 Communication & Professional Skills</h2>
   <p><strong>What it means:</strong> How you speak, write, and present professionally.</p>
 
   <p><strong>How to learn:</strong></p>
   <ul>
-    <li>Practice email writing</li>
-    <li>Presentation & speaking</li>
-    <li>Confidence-building exercises</li>
-  </ul>
+  <li><strong>Beginner:</strong> Basic English, emails</li>
+  <li><strong>Intermediate:</strong> Presentations, meetings</li>
+  <li><strong>Advanced:</strong> Negotiation, leadership communication</li>
+</ul>
 
   <p><strong>Free Resources:</strong></p>
   <ul>
@@ -139,16 +160,16 @@
 </section>
 
 <!-- SKILL 5 -->
-<section class="course">
+<section class="course" id="ai">
   <h2>🤖 AI & Future Skills</h2>
   <p><strong>What it means:</strong> Using AI tools to work faster and smarter.</p>
 
   <p><strong>How to learn:</strong></p>
   <ul>
-    <li>Use AI for research & summaries</li>
-    <li>Understand automation basics</li>
-    <li>Stay updated</li>
-  </ul>
+  <li><strong>Beginner:</strong> AI for research & summaries</li>
+  <li><strong>Intermediate:</strong> Productivity & automation</li>
+  <li><strong>Advanced:</strong> AI-assisted analysis & decision-making</li>
+</ul>
 
   <p><strong>Free Resources:</strong></p>
   <ul>
