--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 </nav>
 
 <header>
-  <h1>Career Roadmaps for Commerce Students</h1>
-  <p>Clear paths. Real skills. No confusion.</p>
+  <h1>Clear Career Roadmaps for Commerce Students</h1>
+  <p>
+    Confused between B.Com, CA, MBA, BBA, CS, or CMA?<br>
+    Get structured guidance, skills roadmap, and realistic career clarity.
+  </p>
 </header>
 
 <section class="course">
@@ -78,6 +81,24 @@
 
   </div>
 </section>
+  <section class="course">
+  <h2>Why Skills Matter More Than Degrees</h2>
+  <p>
+    Degrees decide eligibility. Skills decide salary, growth, and respect.
+  </p>
+
+  <ul>
+    <li>Excel & Data Skills</li>
+    <li>Accounting & Financial Understanding</li>
+    <li>Taxation & Compliance</li>
+    <li>Communication & Professional Skills</li>
+    <li>AI & Future Skills</li>
+  </ul>
+
+  <p>
+    👉 <a href="skills.html"><strong>View the complete Commerce Skills Roadmap →</strong></a>
+  </p>
+</section>
 
 <section class="course">
   <h2>What Makes This Site Different?</h2>
@@ -106,9 +127,19 @@
     Most students realise this too late. This website exists so you don’t.
   </p>
 </section>
+  <section class="course">
+  <h2>Why This Site Exists</h2>
+  <p>
+    Most commerce students waste years due to lack of clarity.
+    This platform exists to provide honest, structured, and realistic guidance —
+    without selling courses or false promises.
+  </p>
+</section>
 
-<footer>
-  <p>Built for students who want clarity, not confusion.</p>
+  <footer>
+  <p>
+    Start with clarity. Build skills early. Make informed career decisions.
+  </p>
 </footer>
 
 </body>
