--- a/bba.html
+++ b/bba.html
@@ -18,123 +18,158 @@
   <a href="cs.html">CS</a>
   <a href="cma.html">CMA</a>
   <a href="skills.html">Skills</a>
-  <a href="compare.html">Compare</a>
 </nav>
 
 <header>
   <h1>BBA Career Roadmap</h1>
-  <p>Management-focused degree for students aiming leadership & business roles</p>
+  <p>How to use BBA smartly for management, MBA, and corporate careers</p>
 </header>
-    <section class="course">
+
+<section class="course">
+  <h2>What is BBA?</h2>
   <p>
-    🔑 <strong>Important:</strong> Your long-term success depends more on skills than degree.
-    <a href="skills.html">View the complete Commerce Skills Roadmap →</a>
+    BBA (Bachelor of Business Administration) builds a foundation in management,
+    business thinking, communication, and leadership. It is ideal for students
+    who want early exposure to the corporate and management world.
   </p>
 </section>
 
 <section class="course">
   <h2>Who Should Choose BBA?</h2>
   <ul>
-    <li>Students interested in management, leadership, and business</li>
-    <li>Those planning MBA in the future</li>
-    <li>Students who prefer practical & presentation-based learning</li>
+    <li>Students interested in management, leadership, or business roles</li>
+    <li>Those planning for an MBA in the future</li>
+    <li>Students who want internships & corporate exposure early</li>
+    <li>People willing to build skills alongside college</li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>BBA Roadmap</h2>
+  <h2>BBA Roadmap (Year-wise)</h2>
 
-  <h3>Year 1 – Business Foundation</h3>
+  <h3>Year 1 – Foundation</h3>
   <ul>
-    <li>Management principles</li>
-    <li>Business communication</li>
-    <li>Basic accounting & Excel</li>
+    <li>Basics of management, economics & accounting</li>
+    <li>Strong focus on communication skills</li>
+    <li>Start Excel & PowerPoint</li>
   </ul>
 
-  <h3>Year 2 – Skill Building</h3>
+  <h3>Year 2 – Exposure</h3>
   <ul>
-    <li>Marketing, HR, finance basics</li>
-    <li>Presentations & group projects</li>
-    <li>Internships (marketing/operations)</li>
+    <li>Internships (marketing, operations, HR, startups)</li>
+    <li>Digital marketing or analytics basics</li>
+    <li>Case studies & presentations</li>
   </ul>
 
-  <h3>Year 3 – Direction & Exposure</h3>
+  <h3>Year 3 – Direction</h3>
   <ul>
-    <li>Choose specialization</li>
-    <li>Prepare for MBA or placements</li>
-    <li>Build resume & LinkedIn</li>
+    <li>Decide: MBA / Job / Specialization</li>
+    <li>CAT / GMAT preparation (if MBA planned)</li>
+    <li>Build resume & placement readiness</li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Must-Learn Skills During BBA</h2>
+  <h2>Must-Learn Skills During BBA (Standout Factor)</h2>
   <ul>
-    <li>Communication & public speaking</li>
-    <li>Excel & basic data analysis</li>
-    <li>Leadership & teamwork</li>
-    <li>Presentation & storytelling</li>
+    <li>Advanced Excel & basic data analysis</li>
+    <li>PowerPoint (professional presentations)</li>
+    <li>Business communication & confidence</li>
+    <li>Digital marketing basics</li>
+    <li>Problem-solving & case thinking</li>
   </ul>
+  <p>
+    👉 For detailed skill explanations and resources,
+    <a href="skills.html">visit the Commerce Skills Roadmap</a>.
+  </p>
 </section>
 
 <section class="course">
   <h2>Career Options After BBA</h2>
   <ul>
-    <li>Management trainee</li>
-    <li>Marketing executive</li>
-    <li>HR executive</li>
-    <li>Operations analyst</li>
-    <li>MBA (most common & powerful path)</li>
+    <li>Management Trainee</li>
+    <li>Business Development Executive</li>
+    <li>Marketing Executive</li>
+    <li>HR Executive</li>
+    <li>Operations Coordinator</li>
+    <li>MBA (Finance, Marketing, HR, Analytics, Operations)</li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Salary Reality</h2>
+  <h2>Salary Reality (India)</h2>
   <ul>
-    <li>Fresh graduate: ₹3–5 LPA</li>
-    <li>With MBA: ₹8–20+ LPA</li>
+    <li>Fresh graduate: ₹2.5–4 LPA</li>
+    <li>With 2–3 years experience + skills: ₹5–7 LPA</li>
+    <li>After MBA: ₹8–25+ LPA (college & skills dependent)</li>
   </ul>
+  <p><strong>Truth:</strong> BBA alone has limited growth without skills or MBA.</p>
 </section>
 
 <section class="course">
   <h2>Free Learning Resources</h2>
   <ul>
     <li>
-      Business Basics –
-      <a href="https://www.coursera.org/courses?query=business" target="_blank">Coursera</a>
+      Excel & Business Skills –
+      <a href="https://learn.microsoft.com/en-us/training/" target="_blank">
+        Microsoft Learn
+      </a>
     </li>
     <li>
-      Communication Skills –
-      <a href="https://www.youtube.com/results?search_query=business+communication" target="_blank">YouTube</a>
+      Management Concepts –
+      <a href="https://www.youtube.com/@LearnWithSumit" target="_blank">
+        Learn With Sumit (YouTube)
+      </a>
+    </li>
+    <li>
+      MBA & Case Prep –
+      <a href="https://www.youtube.com/@InsideIIM" target="_blank">
+        InsideIIM (YouTube)
+      </a>
     </li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Common Mistakes</h2>
+  <h2>Common Mistakes BBA Students Make</h2>
   <ul>
+    <li>Assuming BBA alone guarantees a good job</li>
     <li>Ignoring internships</li>
     <li>Weak communication skills</li>
-    <li>Not planning MBA early</li>
+    <li>Late MBA exam preparation</li>
+  </ul>
+</section>
+
+<section class="course">
+  <h2>Long-Term Benefits of BBA (If Used Correctly)</h2>
+  <ul>
+    <li>Early clarity about management careers</li>
+    <li>Strong base for MBA</li>
+    <li>Confidence, communication & corporate exposure</li>
+    <li>Flexibility to shift roles & industries</li>
   </ul>
 </section>
 
 <section class="course">
   <h2>Should You Choose BBA?</h2>
+
   <p><strong>Choose BBA if:</strong></p>
   <ul>
-    <li>You enjoy leadership & presentations</li>
-    <li>You plan MBA</li>
+    <li>You want a management-oriented career</li>
+    <li>You plan for MBA or leadership roles</li>
+    <li>You are proactive about skills & internships</li>
   </ul>
 
-  <p><strong>Avoid if:</strong></p>
+  <p><strong>Avoid BBA if:</strong></p>
   <ul>
-    <li>You want deep technical finance knowledge</li>
-    <li>You dislike group work</li>
+    <li>You want a technical or accounting-heavy role</li>
+    <li>You dislike presentations & people interaction</li>
+    <li>You don’t plan to build skills or pursue MBA</li>
   </ul>
 </section>
 
 <footer>
-  <p>BBA builds management mindset — MBA builds scale.</p>
+  <p>Built to help commerce students choose wisely — not blindly.</p>
 </footer>
 
 </body>
