--- a/cs.html
+++ b/cs.html
@@ -19,90 +19,151 @@
   <a href="cs.html">CS</a>
   <a href="cma.html">CMA</a>
   <a href="skills.html">Skills</a>
-  <a href="compare.html">Compare</a>
 </nav>
 
 <header>
-  <h1>Company Secretary (CS) Roadmap</h1>
-  <p>Corporate law, compliance & governance career</p>
+  <h1>CS (Company Secretary) Career Roadmap</h1>
+  <p>Governance, compliance, law & corporate leadership explained clearly</p>
 </header>
-  <section class="course">
+
+<section class="course">
+  <h2>What is CS?</h2>
   <p>
-    🔑 <strong>Important:</strong> Your long-term success depends more on skills than degree.
-    <a href="skills.html">View the complete Commerce Skills Roadmap →</a>
+    Company Secretary (CS) is a professional course focused on corporate law,
+    governance, compliance, and board-level advisory. CS professionals act as a
+    bridge between management, shareholders, and regulators.
   </p>
 </section>
 
 <section class="course">
   <h2>Who Should Choose CS?</h2>
   <ul>
-    <li>Students interested in law & corporate rules</li>
-    <li>Those who like documentation & precision</li>
-    <li>Students aiming board-level corporate roles</li>
+    <li>Students interested in corporate law & compliance</li>
+    <li>People who like structured, rule-based work</li>
+    <li>Those aiming for boardroom & governance roles</li>
+    <li>Students comfortable with theory + application</li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>CS Exam Roadmap</h2>
+  <h2>CS Course Structure</h2>
   <ul>
-    <li>Foundation</li>
-    <li>Executive</li>
-    <li>Professional</li>
+    <li><strong>CSEET</strong> – Entry-level exam</li>
+    <li><strong>Executive</strong> – Core law & governance</li>
+    <li><strong>Professional</strong> – Advanced corporate practice</li>
+    <li>Mandatory training & practical exposure</li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Must-Learn Skills</h2>
+  <h2>CS Roadmap (Stage-wise)</h2>
+
+  <h3>Foundation / CSEET</h3>
   <ul>
+    <li>Business communication & legal aptitude</li>
+    <li>Basic economics & management</li>
+    <li>Regular mock tests</li>
+  </ul>
+
+  <h3>Executive Level</h3>
+  <ul>
+    <li>Company law, securities law</li>
+    <li>Economic & commercial laws</li>
+    <li>Start internships under CS firms</li>
+  </ul>
+
+  <h3>Professional Level</h3>
+  <ul>
+    <li>Advanced corporate governance</li>
+    <li>Secretarial audits & compliance</li>
+    <li>Industry specialization</li>
+  </ul>
+</section>
+
+<section class="course">
+  <h2>Must-Learn Skills for CS (Beyond Exams)</h2>
+  <ul>
+    <li>Drafting & documentation</li>
     <li>Corporate law interpretation</li>
-    <li>Drafting & compliance filings</li>
-    <li>Attention to detail</li>
+    <li>Excel & compliance tracking</li>
     <li>Professional communication</li>
+    <li>Attention to detail</li>
+  </ul>
+  <p>
+    👉 Skills explained in depth on the
+    <a href="skills.html">Commerce Skills Page</a>.
+  </p>
+</section>
+
+<section class="course">
+  <h2>Career Options After CS</h2>
+  <ul>
+    <li>Company Secretary in corporate firms</li>
+    <li>Compliance Officer</li>
+    <li>Corporate Law Advisor</li>
+    <li>Secretarial Auditor</li>
+    <li>Independent CS Practice</li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Career Options</h2>
+  <h2>Salary Reality (India)</h2>
   <ul>
-    <li>Company Secretary</li>
-    <li>Compliance officer</li>
-    <li>Corporate legal advisor</li>
-    <li>Consulting & practice</li>
+    <li>Fresh CS: ₹5–8 LPA</li>
+    <li>With 3–5 years experience: ₹10–18 LPA</li>
+    <li>Senior roles / Practice: ₹25+ LPA</li>
+  </ul>
+  <p><strong>Reality:</strong> Reputation & expertise matter more than marks.</p>
+</section>
+
+<section class="course">
+  <h2>Free Resources (Reliable)</h2>
+  <ul>
+    <li>
+      ICSI Resources –
+      <a href="https://www.icsi.edu/" target="_blank">
+        Official ICSI Website
+      </a>
+    </li>
+    <li>
+      CS Preparation –
+      <a href="https://www.youtube.com/@CSAnkitBansal" target="_blank">
+        CS Ankit Bansal (YouTube)
+      </a>
+    </li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Salary Reality</h2>
+  <h2>Common Mistakes CS Students Make</h2>
   <ul>
-    <li>Fresh CS: ₹6–10 LPA</li>
-    <li>Experienced / Practice: ₹15+ LPA</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Common Mistakes</h2>
-  <ul>
-    <li>Underestimating legal depth</li>
-    <li>Poor drafting skills</li>
-    <li>Lack of practical exposure</li>
+    <li>Ignoring practical training</li>
+    <li>Weak drafting skills</li>
+    <li>Studying without understanding application</li>
+    <li>Delaying internships</li>
   </ul>
 </section>
 
 <section class="course">
   <h2>Should You Choose CS?</h2>
-  <p><strong>Choose if:</strong></p>
+
+  <p><strong>Choose CS if:</strong></p>
   <ul>
-    <li>You enjoy law & compliance</li>
+    <li>You enjoy law, governance & compliance</li>
+    <li>You want a structured, respected corporate role</li>
+    <li>You are detail-oriented and patient</li>
   </ul>
 
-  <p><strong>Avoid if:</strong></p>
+  <p><strong>Avoid CS if:</strong></p>
   <ul>
-    <li>You dislike rules & documentation</li>
+    <li>You dislike law & theory-heavy subjects</li>
+    <li>You want quick results without long-term effort</li>
+    <li>You prefer creative or technical work</li>
   </ul>
 </section>
 
 <footer>
-  <p>CS careers reward precision and trust.</p>
+  <p>Clear choices create strong careers.</p>
 </footer>
 
 </body>
