--- a/cma.html
+++ b/cma.html
@@ -19,89 +19,151 @@
   <a href="cs.html">CS</a>
   <a href="cma.html">CMA</a>
   <a href="skills.html">Skills</a>
-  <a href="compare.html">Compare</a>
 </nav>
 
 <header>
-  <h1>CMA Career Roadmap</h1>
-  <p>Costing, strategy & performance management career</p>
+  <h1>CMA (Cost & Management Accountant) Roadmap</h1>
+  <p>Cost control, performance management & strategic finance explained clearly</p>
 </header>
-  <section class="course">
+
+<section class="course">
+  <h2>What is CMA?</h2>
   <p>
-    🔑 <strong>Important:</strong> Your long-term success depends more on skills than degree.
-    <a href="skills.html">View the complete Commerce Skills Roadmap →</a>
+    CMA focuses on cost accounting, financial management, budgeting,
+    performance analysis, and strategic decision-making.
+    CMAs help businesses improve profitability and efficiency.
   </p>
 </section>
 
 <section class="course">
   <h2>Who Should Choose CMA?</h2>
   <ul>
-    <li>Students strong in numbers & analysis</li>
-    <li>Those interested in business strategy</li>
-    <li>Students aiming corporate finance roles</li>
+    <li>Students who enjoy numbers & analysis</li>
+    <li>Those interested in internal business strategy</li>
+    <li>People who like data-driven decisions</li>
+    <li>Students aiming for corporate finance roles</li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>CMA Exam Roadmap</h2>
+  <h2>CMA Course Structure</h2>
   <ul>
-    <li>Foundation</li>
-    <li>Intermediate</li>
-    <li>Final</li>
+    <li><strong>Foundation</strong> – Basics of accounting & economics</li>
+    <li><strong>Intermediate</strong> – Costing, finance & operations</li>
+    <li><strong>Final</strong> – Strategic & advanced management accounting</li>
+    <li>Mandatory practical training</li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Must-Learn Skills</h2>
+  <h2>CMA Roadmap (Stage-wise)</h2>
+
+  <h3>Foundation Level</h3>
   <ul>
-    <li>Cost accounting</li>
-    <li>Financial modeling</li>
-    <li>Strategic decision-making</li>
-    <li>Advanced Excel</li>
+    <li>Accounting fundamentals</li>
+    <li>Cost concepts & basic economics</li>
+    <li>Build study discipline</li>
   </ul>
-</section>
 
-<section class="course">
-  <h2>Career Options</h2>
+  <h3>Intermediate Level</h3>
   <ul>
-    <li>Cost accountant</li>
-    <li>Financial controller</li>
-    <li>Business strategist</li>
+    <li>Costing techniques</li>
+    <li>Financial management</li>
+    <li>Start internships in finance teams</li>
+  </ul>
+
+  <h3>Final Level</h3>
+  <ul>
+    <li>Strategic cost management</li>
+    <li>Performance & risk management</li>
+    <li>Advanced corporate finance</li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Salary Reality</h2>
+  <h2>Must-Learn Skills for CMA</h2>
+  <ul>
+    <li>Advanced Excel & financial modeling</li>
+    <li>Cost analysis & budgeting</li>
+    <li>Business analytics basics</li>
+    <li>Presentation & reporting</li>
+    <li>Decision-making frameworks</li>
+  </ul>
+  <p>
+    👉 Deep skill guidance available on the
+    <a href="skills.html">Commerce Skills Page</a>.
+  </p>
+</section>
+
+<section class="course">
+  <h2>Career Options After CMA</h2>
+  <ul>
+    <li>Cost Accountant</li>
+    <li>Financial Analyst</li>
+    <li>Management Accountant</li>
+    <li>FP&A Professional</li>
+    <li>Corporate Strategy Analyst</li>
+  </ul>
+</section>
+
+<section class="course">
+  <h2>Salary Reality (India)</h2>
   <ul>
     <li>Fresh CMA: ₹6–9 LPA</li>
-    <li>With experience: ₹12–20+ LPA</li>
+    <li>With 3–5 years experience: ₹12–20 LPA</li>
+    <li>Senior roles: ₹25+ LPA</li>
+  </ul>
+  <p><strong>Reality:</strong> Business impact defines pay, not exam rank alone.</p>
+</section>
+
+<section class="course">
+  <h2>Free Resources (Reliable)</h2>
+  <ul>
+    <li>
+      ICAI (CMA) –
+      <a href="https://icmai.in/" target="_blank">
+        Official CMA Institute
+      </a>
+    </li>
+    <li>
+      CMA Concepts –
+      <a href="https://www.youtube.com/@CMARahulMalkan" target="_blank">
+        CMA Rahul Malkan (YouTube)
+      </a>
+    </li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Common Mistakes</h2>
+  <h2>Common Mistakes CMA Students Make</h2>
   <ul>
-    <li>Ignoring practical costing</li>
-    <li>Weak Excel skills</li>
-    <li>No industry exposure</li>
+    <li>Weak practical application</li>
+    <li>Ignoring Excel & analytics</li>
+    <li>Studying theory without understanding business context</li>
+    <li>Late internships</li>
   </ul>
 </section>
 
 <section class="course">
   <h2>Should You Choose CMA?</h2>
-  <p><strong>Choose if:</strong></p>
+
+  <p><strong>Choose CMA if:</strong></p>
   <ul>
-    <li>You like numbers + strategy</li>
+    <li>You like numbers, analysis & strategy</li>
+    <li>You want internal corporate roles</li>
+    <li>You enjoy problem-solving with data</li>
   </ul>
 
-  <p><strong>Avoid if:</strong></p>
+  <p><strong>Avoid CMA if:</strong></p>
   <ul>
     <li>You dislike analytical work</li>
+    <li>You want legal or audit-heavy careers</li>
+    <li>You prefer creative or people-first roles</li>
   </ul>
 </section>
 
 <footer>
-  <p>CMA turns numbers into decisions.</p>
+  <p>Clarity beats confusion. Choose wisely.</p>
 </footer>
 
 </body>
