--- a/skills.html
+++ b/skills.html
@@ -20,6 +20,7 @@
   <a href="cma.html">CMA</a>
   <a href="skills.html">Skills</a>
   <a href="compare.html">Compare</a>
+  <a href="pathfinder.html">Path Finder</a>
 </nav>
 
 <header>
