--- a/compare.html
+++ b/compare.html
@@ -18,6 +18,7 @@
   <a href="mba.html">MBA</a>
   <a href="skills.html">Skills</a>
   <a href="compare.html">Compare</a>
+  <a href="pathfinder.html">Path Finder</a>
 </nav>
 
 <header>
