--- a/cs.html
+++ b/cs.html
@@ -19,6 +19,7 @@
   <a href="cs.html">CS</a>
   <a href="cma.html">CMA</a>
   <a href="skills.html">Skills</a>
+  <a href="compare.html">Compare</a>
   <a href="pathfinder.html">Path Finder</a>
 </nav>
 
